--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="/assets/profile.8c30d6d9.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Baraa Baba</title>
-    <script type="module" crossorigin src="/assets/index.05066c7f.js"></script>
-    <link rel="stylesheet" href="/assets/index.90ea7caa.css">
+    <script type="module" crossorigin src="/assets/index.52ed3a57.js"></script>
+    <link rel="stylesheet" href="/assets/index.8aa6c83d.css">
   </head>
   <body>
     
@@ -29,21 +29,29 @@
 
       <div class="inline-block sm:block  border-white border-2 max-w-fit px-4 rounded-full">
       <a href="http://baraa-baba.vercel.app" class="text-5xl inline-block" target="_blank" rel="noopener noreferrer">
-        other portfilio
+        other portfolio
       </a><span class="ques bg-green-500 inline-block text-white  text-5xl">?</span>
-      <span class="details bg-black  hidden absolute w-[30vw] max-w-[100vw] text-2xl">this website is better for <strong> mobile users</strong> and its a unique experience where 
-        you fly a jet to veiw the website.
+      <span class="details bg-black  hidden absolute  sm:w-[20rem] w-[100vw] text-2xl">this website is better for <strong> mobile users</strong> and its a unique experience where 
+        you fly a jet to view the website.
       </span>
     </div>
   </div>
 </div>
-<div class="about p-2 min-h-[100vh]">
-  <h3 class="sm:h-32 text-4xl h-12 sm:text-6xl">About Me</h3>
-  <div class="card w-[100vw] md:w-[60vw] mb-10 ">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum adipisci itaque laboriosam ipsam quisquam a modi natus voluptatem blanditiis exercitationem qui assumenda, voluptatibus nemo neque perferendis rerum impedit? Temporibus, incidunt.
+<div class="about p-0 md:pl-10 md:pr-10 min-h-[100vh]">
+  <h3 class="sm:h-32 text-4xl text-center h-12 sm:text-6xl">About Me</h3>
+  <div class="card  w-[100vw] md:w-[60vw] mb-10 sm:mb-10 ml-0 mr-0 md:ml-auto ">
+    I am Baraa a teen from lebanon a frontend developer and i love programming and
+     <a href="https://dev.to/baraa_baba" class="about-links" target="_blank" rel="noopener noreferrer">
+        blogging</a> and everything about tech I also love 
+     contributing in open source in <a href="https://github.com/baraa-baba" class="about-links" target="_blank" 
+     rel="noopener noreferrer">github</a> also I am a 
+     freelancer in <a href="https://mostaql.com/u/Baraa1Baba" class="about-links" target="_blank" rel="noopener noreferrer">mostqel</a>  
+     and <a href="https://www.freelancer.com/u/baraa12baba" class="about-links" target="_blank" rel="noopener noreferrer">freelancer.com</a> 
   </div>
   <div id="right" class="card w-[100vw] md:w-[60vw]">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum adipisci itaque laboriosam ipsam quisquam a modi natus voluptatem blanditiis exercitationem qui assumenda, voluptatibus nemo neque perferendis rerum impedit? Temporibus, incidunt.
+    I care about code being clean meaning it's readable, changeable and reusable and I care about 
+    responsive  and the site being accessible for every screen and everyone I care about the 
+    long term and whats best for you.
   </div>
 </div>
   <div class="skils h-[300vh]">
