--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@ background-color: rgba(0, 0, 0, 0.5);
 #right{
   margin: 0 auto 0 0; 
 }
+@media (min-width: 768px) {
+    .card{
+  font-size: 1.5rem;
+    }
+}
 
     </style>
 
