Fixed text size issue

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ background-color: rgba(0, 0, 0, 0.5);
 #right{
   margin: 0 auto 0 0; 
 }
-@media (min-width: 768px) {
+@media (max-width: 768px) {
     .card{
   font-size:1.5rem;
     }
