added a laptop 3d model

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="shortcut icon" href="./assets/profile.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/fbx/textures/Lowpoly_Laptop_1.jpg">
+    <link rel="shortcut icon" href="./assets/fbx/textures/Lowpoly_Laptop_2.jpg">
+    <link rel="shortcut icon" href="./assets/fbx/textures/Lowpoly_Laptop_Nor_1.jpg">
+    <link rel="shortcut icon" href="./assets/fbx/textures/Lowpoly_Laptop_Nor_2.jpg">
     <title>Baraa Baba</title>
   </head>
   <body>
