--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@ background-color: rgba(0, 0, 0, 0.5);
   
   <script  src="three.min.js"></script>
   <script src="GLTFLoader.js"></script>
-    <script  src="/main.js"></script>
-    <script src="./typingEffect.js"></script>
+    <script  src="main.js"></script>
   </body>
 </html>
