added a coffee mug and planet earth

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   </div>
   
   <div id='contact-me' class="contact-cont">
+    <h1 class="contact-header">Contact</h1>
     <div>
         <form target="_blank" action="https://formsubmit.co/9d6d1a7d16373e389623c00f48207d1c" method="POST">
               <input type="text" name="name"  class="contact-input" placeholder="Full Name" required />
@@ -71,6 +72,9 @@
                     name="message" rows="6" required></textarea>
             <button type="submit" class="contact-submit">Submit Form</button>
         </form>
+    </div>
+    <div>
+      <a href="/credits.html" target="_blank" rel="noopener noreferrer">Credits</a>
     </div>
 </div>
 
