fixed route problem

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </form>
     </div>
     <div>
-      <a href="/credits.html" target="_blank" rel="noopener noreferrer">Credits</a>
+      <a href="./credits.html" target="_blank" rel="noopener noreferrer">Credits</a>
     </div>
 </div>
 
